--- a/style.css
+++ b/style.css
@@ -63,3 +63,13 @@ button {
 h1 {
   -webkit-text-stroke: 2px rgba(7, 5, 5,0.5);
 }
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+footer a {
+  width: 30px;
+  margin: 4px;
+}
